# airflow-etl

./: .gitignore  DEPLOYMENT.md  README.md  pyproject.toml  render.py
api/: .dockerignore  Dockerfile  main.py  requirements.txt
dags/: .gitkeep  dog_breed_dag.py
dashboard/: README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
dashboard/src/: App.tsx  api.ts  types.ts
dashboard/src/components/: BreedCard.tsx  BreedDashboard.tsx
database/: schema.sql
helm/: values.yaml
k8s/dog-breeds-api/: 01-configmap.yaml  02-deployment.yaml  03-service.yaml  04-ingress.yaml
k8s/dog-breeds-db/: 01-namespace.yaml  02-configmap.yaml  03-secret.yaml  04-pvc.yaml  05-schema-configmap.yaml  06-deployment.yaml  07-service.yaml
scripts/: README.md  check-prerequisites.sh  cleanup.sh  deploy-airflow.sh  deploy-all.sh  deploy-dog-breeds-api.sh  deploy-dog-breeds-db.sh  generate-helm-templates.sh  port-forward.sh  setup-airflow-db-connection.sh  setup-kind-cluster.sh  start-airflow.sh  status.sh  stop-airflow.sh
templates/: airflow_chart.py  dog_breeds_api_chart.py  dog_breeds_db_chart.py
